--- a/.github/workflows/lineage_microg_random.yml
+++ b/.github/workflows/lineage_microg_random.yml
@@ -46,12 +46,12 @@ jobs:
       env:
         MY_PAT: ${{ secrets.MY_PAT }}
       run: |
-        find . -iname "download_upload"
-        readlink -f download_upload
-        sed -i "s/github_pat_CHANGEME/$MY_PAT/g" download_upload
+        find . -iname "assorted_lineage.sh"
+        readlink -f assorted_lineage.sh
+        sed -i "s/github_pat_CHANGEME/$MY_PAT/g" assorted_lineage.sh
         sudo apt-get install -y rename > /dev/null 2>&1
-        chmod +x download_upload
+        chmod +x assorted_lineage.sh
         echo "Running script now ............"
-        ./download_upload
+        ./assorted_lineage.sh
         #ls -al _release/bin
 
